fix #60 remove mobile spacing

--- a/src/Pages/landing/LandingPage.module.scss
+++ b/src/Pages/landing/LandingPage.module.scss
@@ -4,8 +4,11 @@ $button-margin: 2rem;
 .landingPageContainer {
   margin-top: -1 * $top-padding-navbar-desktop;
   h2 {
-    font-size: 2.5rem;
+    font-size: 1.25rem;
     font-weight: 600;
+    @media screen and (min-width: 768px) {
+      font-size: 2.5rem;
+    }
     span {
       color: $mint-blue;
     }
@@ -112,9 +115,6 @@ $button-margin: 2rem;
   background-position: top left;
   background-repeat: no-repeat;
   background-size: 290px auto;
-  .benefits {
-    padding-top: 4rem;
-  }
   img {
     position: relative;
     width: 50%;
